# fast-gemini

./: .gitignore  CacheConfig.py  FunctionCall.py  GeminiClient.py  README.md  __init__.py  pyproject.toml  requirements.txt
fast_gemini/: AsyncToolExecutor.py  BatchToolExecutor.py  CacheConfig.py  CacheManager.py  FunctionCall.py  FunctionCallResult.py  GeminiClient.py  GeminiFile.py  README.md  RateLimitingAsyncExecutor.py  RateLimitingBatchExecutor.py  Tool.py  ToolExecutor.py  ToolsExecutionResult.py  exceptions.py
fast_gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fast_gemini/session/: ChatManager.py  ChatMessage.py  ChatStorage.py  GenerateContentRequest.py  LocalChatStorage.py  __init__.py
fast_gemini/utils/: logger.py
